# 0WM-Server

./: .gitignore  .gitmodules  0wm-server.opam  AUTHORS  README.md  api.html  api.yml  config.json  dune-project  flake.nix  gen-changelog
.github/workflows/: nightly-deb.yml  nightly-nix.yml
debian/: 0wm-server.lintian-overrides  0wm-server.service  0wm-server.sysusers  changelog  control  copyright  gbp.conf  install  postrm  rules
debian/trixie/: 0wm-server_0~git20260106-1.dsc  0wm-server_0~git20260106-1_amd64.changes  0wm-server_nightly.debian.tar.xz  (+2 more)
lib/: anchor.ml  anchor.mli  color.ml  color.mli  confidence.ml  confidence.mli  dot11.ml  dot11.mli  dot11_iwinfo.ml  dot11_iwinfo.mli  dune  geo.ml  geo.mli  heap.ml  heap.mli  image.ml  image.mli  linalg.ml  linalg.mli  math.ml  math.mli  object_store.ml  object_store.mli  png.ml  png.mli  power.ml  power.mli  render.ml  render.mli  rtree.ml  rtree.mli  scan_store.ml  scan_store.mli  sim.ml  sim.mli  store.ml  store.mli  svg.ml  svg.mli  types.ml  (+3 more)
nix/: cf.nix  dream.nix  gendarme.nix  irmin.nix  scopes.nix  zwm-server.nix
src/: api.ml  api.mli  commands.ml  commands.mli  config.ml  config.mli  dune  monitor.ml  monitor.mli  runtime.ml  runtime.mli  storage.ml  types.ml  types.mli  util.ml  util.mli  web.ml  web.mli  ws.ml  ws.mli  zwm.ml  zwm.mli  zwm_fmt.ml  zwm_fmt.mli  zwm_io.ml  zwm_io.mli  zwmd.ml  zwmd.mli
static/: api.yml
tests/: dune  lanchor.ml  lcolor.ml  ldot11.ml  ldot11_iwinfo.ml  lgeo.ml  lheap.ml  llinalg.ml  lmath.ml  lpower.ml  lrtree.ml  lutil.ml  run_tests.ml  util.ml
